# policyaware

./: .gitignore  ADOPTION.md  CHANGELOG.md  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTIMONIALS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  user_feedback.md
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
docs/: 404.html  BingSiteAuth.xml  PolicyAware_AI_Gateway_User_Guide.docx  alternatives.html  architecture.md  capabilities.md  comparison.md  demo-outputs.md  fastapi-llm-policy-middleware.html  index.html  langchain-policy-guardrails.html  local-code-scan.md  mcp-tool-permission-gateway.html  ml-integrations.md  pii-redaction-llm.html  production-features.md  provider-adapter-examples.md  pypi-publishing.md  robots.txt  seo-and-distribution.md  site.css  sitemap.xml  working-examples.md  yaml-policy-templates.md
docs/capabilities/: audit-observability.md  data-protection.md  evaluation.md  gateway-orchestration.md  guardrails-integrations.md  ml-assisted-signals.md  model-routing-providers.md  policy-enforcement.md  ready-to-use-yaml.md  risk-classification.md  tool-governance.md
docs/ci/: azure-pipelines-policyaware-scan.yml  gitlab-ci-policyaware-scan.yml  policyaware-scan-github-actions.yml
examples/: ml_signal_demo.py  policyaware-scan.yaml
examples/approval-workflow-hooks/: README.md  approval_demo.py  policy.yaml  terminal-output.txt
examples/audit-trace-viewer/: README.md  audit_demo.py  policy.yaml  terminal-output.txt
examples/evals/: executable_governance_cases.yaml  governance_cases.yaml  support_rag.yaml
examples/fastapi-llm-policy-middleware/: README.md  app.py  demo.py  policy.yaml  terminal-output.txt
examples/full-stack-guardrails/: README.md  demo.py  policy.yaml
examples/langchain-policy-guardrails/: README.md  chain_demo.py  policy.yaml  terminal-output.txt
examples/mcp-tool-permission-gateway/: README.md  terminal-output.txt  tool-governance.yaml  tool_gateway_demo.py
examples/pii-redaction-policy/: README.md  demo.py  policy.yaml  terminal-output.txt
examples/policies/: basic.yaml  invalid-policy.yaml  ml-governance.yaml  regulated-rag.yaml  tool-governance.yaml
examples/provider-routing-by-risk/: README.md  policy.yaml  routing_demo.py  terminal-output.txt
examples/providers/: provider-routing.py
examples/regulated-rag-assistant/: README.md  policy.yaml  rag_demo.py  terminal-output.txt
scripts/: build_policyaware_user_guide.py
src/policyaware/: __init__.py  approvals.py  audit.py  cli.py  data_protection.py  evals.py  gateway.py  guardrails.py  models.py  observability.py  policy.py  policy_schema.py  providers.py  reason_codes.py  risk.py  routing.py  scanner.py  tools.py
src/policyaware/integrations/: __init__.py  fastapi.py  flask.py  langchain.py  llamaindex.py
src/policyaware/ml/: __init__.py  base.py  domain.py  presidio.py  prompt_injection.py
tests/: test_deny_by_default.py  test_gateway.py  test_guardrails_adapters.py  test_ml_integrations.py  test_policy.py  test_policy_schema.py  test_production_features.py  test_providers.py  test_public_api.py  test_risk.py  test_scanner.py  test_tools.py
